--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Product Card */
+
 .cardContainer {
   width: 100%;
   height: 350px;
@@ -38,7 +40,7 @@
   font-weight: bold;
 }
 
-/* HOVERING */
+/* Product Card: HOVERING */
 
 .cardContainer:hover .cardHoverContainer {
   display: block;
@@ -75,6 +77,8 @@
   border-color: #ffffff;
   font-weight: bold;
 }
+
+/* Shopping Cart Component */
 
 .shoppingCartWrapper {
   -webkit-box-shadow: 0px 3px 20px -10px rgba(0,0,0,0.65);
